# TuringMachine

./: Button.cpp  Button.h  CMakeLists.txt  README.md  RoundedRectangle.cpp  RoundedRectangle.h  Screen.h  TextBox.cpp  TextBox.h  TuringMachine.cpp  TuringMachine.h  UltimateTable.cpp  UltimateTable.h  main.cpp
